--- a/src/partials/section-sellers.html
+++ b/src/partials/section-sellers.html
@@ -6,28 +6,28 @@
           <picture>
               <source
                 srcset="
-                    ../img/sellers/item-1-desktop-x1.jpg 1x,
-                    ../img/sellers/item-1-desktop-x2.jpg 2x
+                    /img/sellers/item-1-desktop-x1.jpg 1x,
+                    /img/sellers/item-1-desktop-x2.jpg 2x
                 "
                 media="(min-width: 1200px)"
               />
               <source
                 srcset="
-                    ../img/sellers/item-1-tablet-x1.jpg 1x,
-                    ../img/sellers/item-1-tablet-x2.jpg 2x
+                    /img/sellers/item-1-tablet-x1.jpg 1x,
+                    /img/sellers/item-1-tablet-x2.jpg 2x
                 "
                 media="(min-width: 768px)"
               />
               <source
                 srcset="
-                    ../img/sellers/item-1-mobile-x1.jpg 1x,
-                    ../img/sellers/item-1-mobile-x2.jpg 2x
+                    /img/sellers/item-1-mobile-x1.jpg 1x,
+                    /img/sellers/item-1-mobile-x2.jpg 2x
                 "
                 media="(max-width: 767px)"
               />
               <img
                 class="sellers-img"
-                src="../img/sellers/item-1-desktop-x1.jpg"
+                src="/img/sellers/item-1-desktop-x1.jpg"
                 alt="photo of chocolate with hazelnuts"
                 width="368"
                 height="464"
@@ -38,28 +38,28 @@
           <picture>
               <source
                 srcset="
-                    ../img/sellers/item-2-desktop-x1.jpg 1x,
-                    ../img/sellers/item-2-desktop-x2.jpg 2x
+                    /img/sellers/item-2-desktop-x1.jpg 1x,
+                    /img/sellers/item-2-desktop-x2.jpg 2x
                 "
                 media="(min-width: 1200px)"
               />
               <source
                 srcset="
-                    ../img/sellers/item-2-tabler-x1.jpg 1x,
-                    ../img/sellers/item-2-tabler-x2.jpg 2x
+                    /img/sellers/item-2-tabler-x1.jpg 1x,
+                    /img/sellers/item-2-tabler-x2.jpg 2x
                 "
                 media="(min-width: 768px)"
               />
               <source
                 srcset="
-                    ../img/sellers/item-2-mobile-x1.jpg 1x,
-                    ../img/sellers/item-2-mobile-x2.jpg 2x
+                    /img/sellers/item-2-mobile-x1.jpg 1x,
+                    /img/sellers/item-2-mobile-x2.jpg 2x
                 "
                 media="(max-width: 767px)"
               />
               <img
                 class="sellers-img"
-                src="../img/sellers/item-2-desktop-x1.jpg"
+                src="/img/sellers/item-2-desktop-x1.jpg"
                 alt="Photo of milk chocolate with almond pieces"
                 width="368"
                 height="464"
@@ -70,14 +70,14 @@
           <picture>
               <source
                 srcset="
-                    ../img/sellers/item-3-desktop-x1.jpg 1x,
-                    ../img/sellers/item-3-desktop-x2.jpg 2x
+                    /img/sellers/item-3-desktop-x1.jpg 1x,
+                    /img/sellers/item-3-desktop-x2.jpg 2x
                 "
                 media="(min-width: 1200px)"
               />
               <img
                 class="sellers-img"
-                src="../img//sellers//item-3-desktop-x1.jpg"
+                src="/img//sellers//item-3-desktop-x1.jpg"
                 alt="Photo  of chocolate stacked in a pyramid"
                 width="368"
                 height="464"
