--- a/src/css/section-sellers.css
+++ b/src/css/section-sellers.css
@@ -148,6 +148,7 @@
    /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); */
    opacity: 1;
+   visibility: visible;
 }
 .backdrop.is-hidden {
    opacity: 0;
