--- a/src/partials/modal-revievs.html
+++ b/src/partials/modal-revievs.html
@@ -1,6 +1,6 @@
-<!-- <div class="backdrop revievs-container">
+<div class="backdrop is-hidden revievs-container" data-first-modal>
    <div class="modal-revievs">
-      <button class="revievs-close-btn" type="button">
+      <button class="revievs-close-btn btn-close" type="button" data-first-modal-close>
          <svg class="revievs-close-btn-icon" width="24" height="24">
             <use  href="/img/icons/icons.svg#icon-close"></use>
          </svg>
@@ -51,4 +51,4 @@
          <button class="revievs-send-btn" type="submit">Send</button>
       </form>
    </div>
-</div> -->
+</div>
