--- a/src/partials/modal-revievs.html
+++ b/src/partials/modal-revievs.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden revievs-container" data-first-modal>
    <div class="modal-revievs">
-      <button class="revievs-close-btn btn-close" type="button" data-first-modal-close>
+      <button class="revievs-close-btn btn-close modal-scroll" type="button" data-first-modal-close>
          <svg class="revievs-close-btn-icon" width="24" height="24">
             <use  href="/img/icons/icons.svg#icon-close"></use>
          </svg>
