--- a/src/partials/section-sellers.html
+++ b/src/partials/section-sellers.html
@@ -98,6 +98,6 @@
   </div>
 </section>
 <!-- =================== MODAL OPEN BTN видалити пізніше -->
-<button class="open-btn" type="button" data-first-modal-open>
+<button class="open-btn modal-scroll" type="button" data-first-modal-open>
     DELETE
 </button>
