--- a/src/css/section-advantage.css
+++ b/src/css/section-advantage.css
@@ -53,6 +53,9 @@ ul {
    justify-content: center;
    align-items: center;
 }
+h3 {
+   margin-bottom: 18px;
+}
 
 @media screen and (min-width: 375px) {
    .container-benefits {
