--- a/src/css/root-colors.css
+++ b/src/css/root-colors.css
@@ -1,7 +1,7 @@
 
 
 :root {
-  --background-active-button:#FAFAFA
+  --background-active-button:#FAFAFA;
   --dark: #111111;
   --dark-violet: #1E1823;
   --Orange:  #FD9222;
