--- a/src/css/section-hero.css
+++ b/src/css/section-hero.css
@@ -1,16 +1,29 @@
-@media screen and (max-width: 767px) {
-   .hero-container {
-      margin: 0 auto;
-      padding: 395px 20px 20px;
-      background-image: url(../img/hero/hero-bc-mobile-x1.jpg);
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      text-align: center;
-   }
+.container {
+   padding-left: 20px;
+   padding-right: 20px;
+   margin: 0 auto;
+   max-width: 375px;
+}
+.hero-container {
+   padding-top: 395px;
+   padding-bottom: 20px;
+   padding-left: 20px;
+   padding-right: 20px;
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+   /* text-align: center; */
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+   border-radius: 30px;
+   background-color: #1e1823;
+}
+.hero {
+   padding-bottom: 72px;
+   padding-left: 20px;
+   padding-right: 20px;
 }
 
-.hero-hidded-title {
+.hero-hidden-title {
    position: absolute;
    height: 1px;
    margin: -1px;
@@ -22,28 +35,165 @@
    overflow: hidden;
    width: 1px;
 }
-.hero {
-   padding-top: 0;
-   padding-left: 20px;
-   padding-right: 20px;
-}
-.container {
-}
 
-.hero-hidden-title {
-}
 .hero-subtitle {
+   font-weight: 500;
+   font-size: 20px;
+   line-height: 1.2;
+   letter-spacing: -0.03em;
+   color: #ffffff;
+   text-align: start;
+
+   margin-bottom: 32px;
 }
 .hero-actions {
 }
 .hero-buttons {
+   display: flex;
+   justify-content: start;
+   gap: 14px;
+   margin-bottom: 32px;
 }
+
 .buy-now-button {
+   min-width: 120px;
+   padding: 12px 28px;
+   background: #fd9222;
+   border-radius: 100px;
+
+   font-weight: 600;
+   font-size: 14px;
+   line-height: 1.22;
+   color: #ffffff;
+   border: transparent;
+
+   transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .how-its-made-button {
+   min-width: 159px;
+   padding: 12px 28px;
+   border: 1px solid #ffffff;
+   border-radius: 100px;
+
+   font-weight: 600;
+   font-size: 14px;
+   line-height: 1.22;
+   color: #ffffff;
+
+   transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .scroll-down-button {
+   font-weight: 500;
+   font-size: 12px;
+   line-height: 1.17;
+   letter-spacing: -0.03em;
+   color: #ffffff;
+
+   display: flex;
+   align-items: center;
+   gap: 12px;
 }
-.scroll-down {
-   display: block;
+.scroll-down-icon {
+   width: 28px;
+   height: 28px;
+   fill: #fd9222;
+   background-color: #ffffff;
+   border-radius: 50%;
+}
+
+/* MOBILE SMALL */
+@media screen and (max-width: 374px) {
+   .hero-container {
+      background-image: linear-gradient(
+            180deg,
+            rgba(17, 17, 17, 0) 0%,
+            rgba(17, 17, 17, 0.4) 100%
+         ),
+         url(../img/hero/hero-bc-mobile-x1.jpg);
+   }
+
+   @media screen and (min-device-pixel-ratio: 2) and (max-width: 374px),
+      screen and (min-resolution: 192dpi) and (max-width: 374px),
+      screen and (min-resolution: 2dppx) and (max-width: 374px) {
+      .hero-container {
+         background-image: linear-gradient(
+               180deg,
+               rgba(17, 17, 17, 0) 0%,
+               rgba(17, 17, 17, 0.4) 100%
+            ),
+            url(../img/hero/hero-bc-mobile-x2.jpg);
+      }
+   }
+}
+
+/* MOBILE 375-767 */
+@media screen and (min-width: 375px) and (max-width: 767px) {
+   .hero-container {
+      background-image: linear-gradient(
+            180deg,
+            rgba(17, 17, 17, 0) 0%,
+            rgba(17, 17, 17, 0.4) 100%
+         ),
+         url(../img/hero/hero-bc-mobile-x1.jpg);
+   }
+
+   @media screen and (min-device-pixel-ratio: 2) and (min-width: 375px) and (max-width: 767px),
+      screen and (min-resolution: 192dpi) and (min-width: 375px) and (max-width: 767px),
+      screen and (min-resolution: 2dppx) and (min-width: 375px) and (max-width: 767px) {
+      .hero-container {
+         background-image: linear-gradient(
+               180deg,
+               rgba(17, 17, 17, 0) 0%,
+               rgba(17, 17, 17, 0.4) 100%
+            ),
+            url(../img/hero/hero-bc-mobile-x2.jpg);
+      }
+   }
+}
+
+/* TABLET */
+@media screen and (min-width: 768px) {
+   .container {
+      max-width: 768px;
+   }
+   .hero {
+      padding-bottom: 50px;
+   }
+   .hero-container {
+      padding-top: 671px;
+      padding-right: 40px;
+      padding-bottom: 40px;
+      padding-left: 40px;
+      background-image: linear-gradient(
+            180deg,
+            rgba(17, 17, 17, 0) 0%,
+            rgba(17, 17, 17, 0.4) 100%
+         ),
+         url(../img/hero/hero-bc-desktop-x1.jpg);
+   }
+   @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+      screen and (min-resolution: 192dpi) and (min-width: 768px),
+      screen and (min-resolution: 2dppx) and (min-width: 768px) {
+      .hero-container {
+         background-image: linear-gradient(
+               180deg,
+               rgba(17, 17, 17, 0) 0%,
+               rgba(17, 17, 17, 0.4) 100%
+            ),
+            url(../img/hero/hero-bc-desktop-x2.jpg);
+      }
+   }
+}
+
+/* DESCTOP */
+@media screen and (min-width: 1200px) {
+   .container {
+      max-width: 1166px;
+   }
+   .hero {
+      padding-bottom: 72px;
+   }
+   .hero-container {
+      padding-top: 381px;
+   }
 }
