--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -9,8 +9,8 @@
         <button class="buy-now-button" type="button">Buy now</button>
         <a class="how-its-made-button" href="#howtomade">How it&#39;s made</a>
       </div>
-      <a class="scroll-down-button" href="#footer">scroll down<svg class="scroll-down" width="28" height="28">
-          <use href="./img/icons/scroll.svg"></use>
+      <a class="scroll-down-button" href="#footer">scroll down<svg class="scroll-down-icon" width="16" height="16">
+          <use href="../img/icons/icons.svg#icon-scroll-down"></use>
         </svg></a>
     </div>
   </div>
