--- a/src/css/header.css
+++ b/src/css/header.css
@@ -51,10 +51,16 @@
 }
 .nav-menu-item {
    position: relative;
-   overflow: hidden;
+   
 }
 
 .nav-menu-link {
+   transition: all 500ms linear;
+}
+
+.nav-menu-link:hover,
+.nav-menu-link:focus {
+   color: var(--FooterSecondText);
 }
 .nav-link-line {
 }
@@ -79,6 +85,7 @@
 }
 
 .social-link svg {
+   transition: all 500ms linear;
    width: 20px;
    height: 20px;
    stroke: #111111;
@@ -89,9 +96,17 @@
 .social-mobile-item {
 }
 .social-mobile-link svg {
+   transition: all 500ms linear;
    fill: #111111;
    stroke: #fff;
 }
+
+.social-mobile-link:hover svg,
+.social-mobile-link:focus svg {
+   fill: #111111;
+   stroke: #FD9222;
+}
+
 
 @media screen and (max-height:330px) {
    .social-mobile-menu {
@@ -124,8 +139,11 @@
       justify-content: space-between;
    }
    .nav-menu {
-      text-align: center;
+      text-align: left;
       margin-top: 40%;
+      display: flex;
+      flex-direction: column;
+      margin-left: 23%;
    }
 
    .menu-container.js-menu-container.is-open {
@@ -149,14 +167,61 @@
       display: flex;
       justify-content: space-between;
       flex-direction: column;
-      transition: all 250ms linear;
+      transition:all 500ms linear;
    }
    .nav-menu-item:not(:last-child) {
       margin-bottom: 24px;
     }
-    .nav-menu-link {
-      font-weight: 500;
+    .nav-menu-item {
+      width: 120px;
+      display: inline-block;
+      position: relative;
+      overflow: hidden;
     }
+    .nav-menu-item:nth-child(1) {
+      width: 47px;
+    }
+    .nav-menu-item:nth-child(2) {
+      width: 105px;
+    }
+    .nav-menu-item:nth-child(3) {
+      width: 92px;
+    }
+    .nav-menu-item:nth-child(4) {
+      width: 72px;
+    }
+     .nav-menu-item:nth-child(5) {
+      width: 124px;
+    }
+    .nav-menu-link {
+      width:140px;
+      font-weight: 500;
+      overflow: hidden;
+      display: inline;
+    }
+
+    .nav-menu-link::after {
+      content: "";
+      display: block;
+      background-color: var(--FooterSecondText);
+      width: 100%;
+      height: 2px;
+      left: 0;
+   bottom:0;
+   transform: translateX(-100%);
+   transition: all 500ms linear;
+    }
+    .nav-menu-link:hover::after {
+   transform: translateX(0);
+    }
+   
+
+    button.js-close-menu:focus svg,
+    button.js-close-menu:hover svg {
+      stroke: var(--FooterSecondText);
+      transform: scale(1.3);
+
+   }
 
 
    .social-menu {
@@ -198,7 +263,8 @@
       justify-content: flex-end;
    }
 .nav-menu-item {
-   padding: 20px 0;
+   padding: 5px 0;
+   overflow: hidden;
 }
 
    .nav-menu-item::before {
