--- a/src/css/section-hero.css
+++ b/src/css/section-hero.css
@@ -1,9 +1,3 @@
-.container {
-   padding-left: 20px;
-   padding-right: 20px;
-   margin: 0 auto;
-   max-width: 375px;
-}
 .hero-container {
    padding-top: 395px;
    padding-bottom: 20px;
@@ -12,11 +6,29 @@
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
-   /* text-align: center; */
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    border-radius: 30px;
    background-color: #1e1823;
+   background-image: linear-gradient(
+         180deg,
+         rgba(17, 17, 17, 0) 0%,
+         rgba(17, 17, 17, 0.4) 100%
+      ),
+      url(../img/hero/hero-bc-mobile-x1.jpg);
 }
+@media screen and (min-device-pixel-ratio: 2),
+   screen and (min-resolution: 192dpi),
+   screen and (min-resolution: 2dppx) {
+   .hero-container {
+      background-image: linear-gradient(
+            180deg,
+            rgba(17, 17, 17, 0) 0%,
+            rgba(17, 17, 17, 0.4) 100%
+         ),
+         url(../img/hero/hero-bc-mobile-x2.jpg);
+   }
+}
+
 .hero {
    padding-bottom: 72px;
    padding-left: 20px;
@@ -43,11 +55,9 @@
    letter-spacing: -0.03em;
    color: #ffffff;
    text-align: start;
-
    margin-bottom: 32px;
 }
-.hero-actions {
-}
+
 .hero-buttons {
    display: flex;
    justify-content: start;
@@ -55,30 +65,29 @@
    margin-bottom: 32px;
 }
 
-.buy-now-button {
-   min-width: 120px;
-   padding: 12px 28px;
-   background: #fd9222;
-   border-radius: 100px;
-
+.button {
+   color: #ffffff;
    font-weight: 600;
    font-size: 14px;
    line-height: 1.22;
-   color: #ffffff;
+   background: #fd9222;
+   border-radius: 100px;
+   padding: 14px 40px;
    border: transparent;
+   text-align: center;
+}
+
+.buy-now-button {
+   padding: 12px 28px;
+   border-radius: 100px;
 
    transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .how-its-made-button {
-   min-width: 159px;
    padding: 12px 28px;
    border: 1px solid #ffffff;
    border-radius: 100px;
-
-   font-weight: 600;
-   font-size: 14px;
-   line-height: 1.22;
-   color: #ffffff;
+   background: none;
 
    transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -103,54 +112,13 @@
 
 /* MOBILE SMALL */
 @media screen and (max-width: 374px) {
-   .hero-container {
-      background-image: linear-gradient(
-            180deg,
-            rgba(17, 17, 17, 0) 0%,
-            rgba(17, 17, 17, 0.4) 100%
-         ),
-         url(../img/hero/hero-bc-mobile-x1.jpg);
-   }
-
-   @media screen and (min-device-pixel-ratio: 2) and (max-width: 374px),
-      screen and (min-resolution: 192dpi) and (max-width: 374px),
-      screen and (min-resolution: 2dppx) and (max-width: 374px) {
-      .hero-container {
-         background-image: linear-gradient(
-               180deg,
-               rgba(17, 17, 17, 0) 0%,
-               rgba(17, 17, 17, 0.4) 100%
-            ),
-            url(../img/hero/hero-bc-mobile-x2.jpg);
-      }
+   .hero-subtitle {
+      max-width: 295px;
    }
 }
-
 /* MOBILE 375-767 */
 @media screen and (min-width: 375px) and (max-width: 767px) {
-   .hero-container {
-      background-image: linear-gradient(
-            180deg,
-            rgba(17, 17, 17, 0) 0%,
-            rgba(17, 17, 17, 0.4) 100%
-         ),
-         url(../img/hero/hero-bc-mobile-x1.jpg);
-   }
-
-   @media screen and (min-device-pixel-ratio: 2) and (min-width: 375px) and (max-width: 767px),
-      screen and (min-resolution: 192dpi) and (min-width: 375px) and (max-width: 767px),
-      screen and (min-resolution: 2dppx) and (min-width: 375px) and (max-width: 767px) {
-      .hero-container {
-         background-image: linear-gradient(
-               180deg,
-               rgba(17, 17, 17, 0) 0%,
-               rgba(17, 17, 17, 0.4) 100%
-            ),
-            url(../img/hero/hero-bc-mobile-x2.jpg);
-      }
-   }
 }
-
 /* TABLET */
 @media screen and (min-width: 768px) {
    .container {
@@ -158,6 +126,36 @@
    }
    .hero {
       padding-bottom: 50px;
+   }
+   .hero-subtitle {
+      font-size: 28px;
+      width: 484px;
+   }
+   .buy-now-button {
+      padding: 14px 40px;
+      min-width: 144px;
+   }
+   .how-its-made-button {
+      padding: 14px 40px;
+      min-width: 183px;
+   }
+   .hero-buttons {
+      margin-bottom: 0;
+   }
+   .hero-actions {
+      display: flex;
+      justify-content: space-between;
+   }
+   .scroll-down-button {
+      font-size: 14px;
+      line-height: 1.29;
+   }
+   .scroll-down-button {
+      gap: 14px;
+   }
+   .scroll-down-icon {
+      width: 38px;
+      height: 38px;
    }
    .hero-container {
       padding-top: 671px;
@@ -169,7 +167,7 @@
             rgba(17, 17, 17, 0) 0%,
             rgba(17, 17, 17, 0.4) 100%
          ),
-         url(../img/hero/hero-bc-desktop-x1.jpg);
+         url(/img/hero/hero-bc-tablet-x1.jpg);
    }
    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
       screen and (min-resolution: 192dpi) and (min-width: 768px),
@@ -180,20 +178,37 @@
                rgba(17, 17, 17, 0) 0%,
                rgba(17, 17, 17, 0.4) 100%
             ),
-            url(../img/hero/hero-bc-desktop-x2.jpg);
+            url(/img/hero/hero-bc-tablet-x2.jpg);
       }
    }
 }
-
 /* DESCTOP */
 @media screen and (min-width: 1200px) {
+   .hero-container {
+      padding-top: 381px;
+      background-image: linear-gradient(
+            180deg,
+            rgba(17, 17, 17, 0) 0%,
+            rgba(17, 17, 17, 0.4) 100%
+         ),
+         url(/img/hero/hero-bc-desktop-x1.jpg);
+   }
+   @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+      screen and (min-resolution: 192dpi) and (min-width: 768px),
+      screen and (min-resolution: 2dppx) and (min-width: 768px) {
+      .hero-container {
+         background-image: linear-gradient(
+               180deg,
+               rgba(17, 17, 17, 0) 0%,
+               rgba(17, 17, 17, 0.4) 100%
+            ),
+            url(/img/hero/hero-bc-desktop-x2.jpg);
+      }
+   }
    .container {
       max-width: 1166px;
    }
    .hero {
       padding-bottom: 72px;
-   }
-   .hero-container {
-      padding-top: 381px;
    }
 }
