--- a/src/css/root-colors.css
+++ b/src/css/root-colors.css
@@ -6,3 +6,9 @@
   --Orange:  #FD9222;
   /*NAVY-BLUE-MODAL* Overlay */
   --Herobackground: rgba(46, 47, 66, 0.7);
+  
+  --FooterMainText: #ffffff;
+  --FooterSecondText: #fd9222;
+  --FooterBackground: #1E1823;
+  --FooterBefore: rgba(255, 255, 255, 0.1);
+}
