--- a/src/partials/section-components.html
+++ b/src/partials/section-components.html
@@ -42,7 +42,7 @@
                     </div>
                 </a>
             </li>
-            <li class="component-cards">
+            <li class="component-cards order-img">
                 <a href="" class="component-cards-interactive link">
                     <div class="component-cards-img">
                         <img class="component-cards-img-row" src="./img/components/nuts-tablet-mobile.png"
