--- a/src/css/section-components.css
+++ b/src/css/section-components.css
@@ -115,7 +115,7 @@ color: var(--Orange);
     border: 1px solid var(--Main-white);
 
     transform: translate(0, 100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .component-cards-interactive:focus .overlay,
 .component-cards-interactive:hover .overlay {
@@ -174,7 +174,7 @@ color: var(--Orange);
     font-size: 10px;
     line-height: 1.2;
     color: var(--dark);
-    background-color: #FAFAFA;
+    background-color: var(--background-active-button);
     margin-left: 10px;
     border: 1px solid var(--Orange);
     border-radius: 35px;
@@ -218,7 +218,9 @@ color: var(--Orange);
         flex-wrap: wrap;
         row-gap: 32px;
         justify-content: space-between;
+       
     }
+   
 
 }
 
@@ -233,13 +235,17 @@ color: var(--Orange);
     .overlay {
         padding: 18px;
         overflow-y: auto;
-
+        scrollbar-color: 
     }
-
-
+    ::-webkit-scrollbar {
+        width: 4px;
+        background-color: inherit;
+    }
+   
     .component-cards-img {
         width: 270px;
         height: 270px;
     }
+   
 }
  
