--- a/src/partials/section-sellers.html
+++ b/src/partials/section-sellers.html
@@ -1,103 +1,106 @@
 <section class="sellers-section" id="sellers">
-  <div class="container sellers-container">    
-    <h2 class="sellers-title"><span class="sellers-title-text">Top</span> Sellers</h2>
-    <ul class="sellers-list">
-        <li class="sellers-list-item one">
-          <picture>
-              <source
-                srcset="
-                    /img/sellers/item-1-desktop-x1.jpg 1x,
-                    /img/sellers/item-1-desktop-x2.jpg 2x
-                "
-                media="(min-width: 1200px)"
-              />
-              <source
-                srcset="
-                    /img/sellers/item-1-tablet-x1.jpg 1x,
-                    /img/sellers/item-1-tablet-x2.jpg 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
-                srcset="
-                    /img/sellers/item-1-mobile-x1.jpg 1x,
-                    /img/sellers/item-1-mobile-x2.jpg 2x
-                "
-                media="(max-width: 767px)"
-              />
-              <img
-                class="sellers-img"
-                src="/img/sellers/item-1-desktop-x1.jpg"
-                alt="photo of chocolate with hazelnuts"
-                width="368"
-                height="464"
-              />
-          </picture>
-        </li>
-        <li class="sellers-list-item two">
-          <picture>
-              <source
-                srcset="
-                    /img/sellers/item-2-desktop-x1.jpg 1x,
-                    /img/sellers/item-2-desktop-x2.jpg 2x
-                "
-                media="(min-width: 1200px)"
-              />
-              <source
-                srcset="
-                    /img/sellers/item-2-tabler-x1.jpg 1x,
-                    /img/sellers/item-2-tabler-x2.jpg 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <source
-                srcset="
-                    /img/sellers/item-2-mobile-x1.jpg 1x,
-                    /img/sellers/item-2-mobile-x2.jpg 2x
-                "
-                media="(max-width: 767px)"
-              />
-              <img
-                class="sellers-img"
-                src="/img/sellers/item-2-desktop-x1.jpg"
-                alt="Photo of milk chocolate with almond pieces"
-                width="368"
-                height="464"
-              />
-          </picture>
-        </li>
-        <li class="sellers-list-item three">
-          <picture>
-              <source
-                srcset="
-                    /img/sellers/item-3-desktop-x1.jpg 1x,
-                    /img/sellers/item-3-desktop-x2.jpg 2x
-                "
-                media="(min-width: 1200px)"
-              />
-              <img
-                class="sellers-img"
-                src="/img//sellers//item-3-desktop-x1.jpg"
-                alt="Photo  of chocolate stacked in a pyramid"
-                width="368"
-                height="464"
-              />
-          </picture>
-        </li>    
-        <li class="sellers-list-item four">
+   <div class="container sellers-container">
+      <h2 class="sellers-title">
+         <span class="sellers-title-text">Top</span> Sellers
+      </h2>
+      <ul class="sellers-list">
+         <li class="sellers-list-item one">
+            <picture>
+               <source
+                  srcset="
+                     /img/sellers/item-1-desktop-x1.jpg 1x,
+                     /img/sellers/item-1-desktop-x2.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+               />
+               <source
+                  srcset="
+                     /img/sellers/item-1-tablet-x1.jpg 1x,
+                     /img/sellers/item-1-tablet-x2.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+               />
+               <source
+                  srcset="
+                     /img/sellers/item-1-mobile-x1.jpg 1x,
+                     /img/sellers/item-1-mobile-x2.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+               />
+               <img
+                  class="sellers-img"
+                  src="/img/sellers/item-1-desktop-x1.jpg"
+                  alt="photo of chocolate with hazelnuts"
+                  width="368"
+                  height="464"
+               />
+            </picture>
+         </li>
+         <li class="sellers-list-item two">
+            <picture>
+               <source
+                  srcset="
+                     /img/sellers/item-2-desktop-x1.jpg 1x,
+                     /img/sellers/item-2-desktop-x2.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+               />
+               <source
+                  srcset="
+                     /img/sellers/item-2-tabler-x1.jpg 1x,
+                     /img/sellers/item-2-tabler-x2.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+               />
+               <source
+                  srcset="
+                     /img/sellers/item-2-mobile-x1.jpg 1x,
+                     /img/sellers/item-2-mobile-x2.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+               />
+               <img
+                  class="sellers-img"
+                  src="/img/sellers/item-2-desktop-x1.jpg"
+                  alt="Photo of milk chocolate with almond pieces"
+                  width="368"
+                  height="464"
+               />
+            </picture>
+         </li>
+         <li class="sellers-list-item three">
+            <picture>
+               <source
+                  srcset="
+                     /img/sellers/item-3-desktop-x1.jpg 1x,
+                     /img/sellers/item-3-desktop-x2.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+               />
+               <img
+                  class="sellers-img"
+                  src="/img//sellers//item-3-desktop-x1.jpg"
+                  alt="Photo  of chocolate stacked in a pyramid"
+                  width="368"
+                  height="464"
+               />
+            </picture>
+         </li>
+         <li class="sellers-list-item four">
             <p class="sellers-description">
-          Crazy enough chocolate originates from a bean just like the coffee bean
-          called Cacao. Cacao has been around for thousands of years and was first
-          discovered by the Native American tribe called the Mayans.
-          </p>
-        </li>
-    <li class="sellers-list-item five">
-    <button class="sellers-btn" type="button">Buy now</button>
-    </li>
-    </ul>
-  </div>
+               Crazy enough chocolate originates from a bean just like the
+               coffee bean called Cacao. Cacao has been around for thousands of
+               years and was first discovered by the Native American tribe
+               called the Mayans.
+            </p>
+         </li>
+         <li class="sellers-list-item five">
+            <button class="sellers-btn" type="button">Buy now</button>
+         </li>
+      </ul>
+   </div>
 </section>
 <!-- =================== MODAL OPEN BTN видалити пізніше -->
 <button class="open-btn modal-scroll" type="button" data-first-modal-open>
-    DELETE
+   DELETE
 </button>
