--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -6,8 +6,8 @@
       of pure delight!</h2>
     <div class="hero-actions">
       <div class="hero-buttons">
-        <button class="buy-now-button" type="button">Buy now</button>
-        <a class="how-its-made-button" href="#howtomade">How it&#39;s made</a>
+        <button class="button buy-now-button" type="button">Buy now</button>
+        <a class="button how-its-made-button" href="#howtomade">How it&#39;s made</a>
       </div>
       <a class="scroll-down-button" href="#footer">scroll down<svg class="scroll-down-icon" width="16" height="16">
           <use href="../img/icons/icons.svg#icon-scroll-down"></use>
