--- a/src/css/section-hero.css
+++ b/src/css/section-hero.css
@@ -1,4 +1,4 @@
-.hero-container {
+.hero-wraper {
    padding-top: 395px;
    padding-bottom: 20px;
    padding-left: 20px;
@@ -18,7 +18,7 @@
 @media screen and (min-device-pixel-ratio: 2),
 screen and (min-resolution: 192dpi),
 screen and (min-resolution: 2dppx) {
-   .hero-container {
+   .hero-wraper {
       background-image: linear-gradient(180deg,
             rgba(17, 17, 17, 0) 0%,
             rgba(17, 17, 17, 0.4) 100%),
@@ -28,8 +28,6 @@ screen and (min-resolution: 2dppx) {
 
 .hero {
    padding-bottom: 72px;
-   padding-left: 20px;
-   padding-right: 20px;
 }
 
 .hero-hidden-title {
@@ -161,7 +159,7 @@ screen and (min-resolution: 2dppx) {
       height: 38px;
    }
 
-   .hero-container {
+   .hero-wraper {
       padding-top: 671px;
       padding-right: 40px;
       padding-bottom: 40px;
@@ -175,7 +173,7 @@ screen and (min-resolution: 2dppx) {
    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
    screen and (min-resolution: 192dpi) and (min-width: 768px),
    screen and (min-resolution: 2dppx) and (min-width: 768px) {
-      .hero-container {
+      .hero-wraper {
          background-image: linear-gradient(180deg,
                rgba(17, 17, 17, 0) 0%,
                rgba(17, 17, 17, 0.4) 100%),
@@ -186,7 +184,7 @@ screen and (min-resolution: 2dppx) {
 
 /* DESCTOP */
 @media screen and (min-width: 1200px) {
-   .hero-container {
+   .hero-wraper {
       padding-top: 381px;
       background-image: linear-gradient(180deg,
             rgba(17, 17, 17, 0) 0%,
@@ -197,7 +195,7 @@ screen and (min-resolution: 2dppx) {
    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
    screen and (min-resolution: 192dpi) and (min-width: 768px),
    screen and (min-resolution: 2dppx) and (min-width: 768px) {
-      .hero-container {
+      .hero-wraper {
          background-image: linear-gradient(180deg,
                rgba(17, 17, 17, 0) 0%,
                rgba(17, 17, 17, 0.4) 100%),
