--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,4 +1,4 @@
-<section class="section-product" id="products">
+<section class="section-product" id="#">
    <div class="container-product">
       <h2 class="section-product-title">Our <span>products</span></h2>
       <div class="swiper-product swiper-container">
