--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,9 +1,9 @@
 <section class="section-product" id="products">
    <div class="container-product">
       <h2 class="section-product-title">Our <span>products</span></h2>
-      <div class="swiper-product">
-         <ul class="section-product-list">
-            <li class="section-product-item">
+      <div class="swiper-product swiper-container">
+         <ul class="section-product-list swiper-wrapper">
+            <li class="section-product-item swiper-slide">
                <img
                   srcset="
                      ../img/product/product-orange.jpg    1x,
@@ -20,7 +20,7 @@
                </div>
                <button type="button" class="product-item-btn">45 UAH</button>
             </li>
-            <li class="section-product-item">
+            <li class="section-product-item swiper-slide">
                <img
                   srcset="
                      ../img/product/product-apple-cranberry.jpg    1x,
@@ -37,7 +37,7 @@
                </div>
                <button type="button" class="product-item-btn">50 UAH</button>
             </li>
-            <li class="section-product-item">
+            <li class="section-product-item swiper-slide">
                <img
                   srcset="
                      ../img/product/product-lime-sea-salt.jpg    1x,
@@ -54,7 +54,7 @@
                </div>
                <button type="button" class="product-item-btn">66 UAH</button>
             </li>
-            <li class="section-product-item">
+            <li class="section-product-item swiper-slide">
                <img
                   srcset="
                      ../img/product/product-pineapple.jpg    1x,
@@ -71,7 +71,7 @@
                </div>
                <button type="button" class="product-item-btn">54 UAH</button>
             </li>
-            <li class="section-product-item">
+            <li class="section-product-item swiper-slide">
                <img
                   srcset="
                      ../img/product/product-classic-milk.jpg    1x,
@@ -88,7 +88,7 @@
                </div>
                <button type="button" class="product-item-btn">45 UAH</button>
             </li>
-            <li class="section-product-item">
+            <li class="section-product-item swiper-slide">
                <img
                   srcset="
                      ../img/product/product-honey.jpg    1x,
@@ -105,7 +105,7 @@
                </div>
                <button type="button" class="product-item-btn">50 UAH</button>
             </li>
-            <li class="section-product-item">
+            <li class="section-product-item swiper-slide">
                <img
                   srcset="
                      ../img/product/product-roasted-fruits.jpg    1x,
@@ -122,7 +122,7 @@
                </div>
                <button type="button" class="product-item-btn">66 UAH</button>
             </li>
-            <li class="section-product-item">
+            <li class="section-product-item swiper-slide">
                <img
                   srcset="
                      ../img/product/product-classic-white.jpg    1x,
@@ -133,7 +133,7 @@
                   width="230"
                   height="201"
                />
-               <div class="product-item-content">
+               <div class="product-item-content swiper-slide">
                   <h3 class="product-item-title">Classic</h3>
                   <p class="product-item-description">White chocolate</p>
                </div>
@@ -141,6 +141,6 @@
             </li>
          </ul>
       </div>
-      <div class="section-product-pagination"></div>
+      <div class="swiper-pagination"></div>
    </div>
 </section>
