--- a/src/css/root-colors.css
+++ b/src/css/root-colors.css
@@ -1,18 +1,16 @@
-
-
 :root {
-  --background-active-button:#FAFAFA;
-  --dark: #111111;
-  --dark-violet: #1E1823;
-  --Orange:  #FD9222;
-  /*NAVY-BLUE-MODAL* Overlay */
-  --FooterMainText: #ffffff;
---FooterSecondText: #fd9222;
---FooterBackground: #1E1823;
---FooterBefore: rgba(255, 255, 255, 0.1);
---Main-white: #ffffff;
---Adventage-Section: #1e1823;
---Adventage-p-color: rgba(255, 255, 255, 0.7);
---Herobackground: rgba(46, 47, 66, 0.7);
+   --background-active-button: #fafafa;
+   --dark: #111111;
+   --dark-violet: #1e1823;
+   --Orange: #fd9222;
+   /*NAVY-BLUE-MODAL* Overlay */
+   --FooterMainText: #ffffff;
+   --FooterSecondText: #fd9222;
+   --FooterBackground: #1e1823;
+   --FooterBefore: rgba(255, 255, 255, 0.1);
+   --Main-white: #ffffff;
+   --Adventage-Section: #1e1823;
+   --Adventage-p-color: rgba(255, 255, 255, 0.7);
+   --Herobackground: rgba(46, 47, 66, 0.7);
+   --product-main-background: rgba(17, 17, 17, 0.1);
 }
-
