--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,12 +4,30 @@
          ><span class="logo-text">SIMPLY CHOCOLATE</span ><span class="logo-icon"><img src="./img/icons/logo-desktop.svg" alt=""></span></a
       >
 
-      
+      <ul class="nav-menu">
+         <li class="nav-menu-item">
+            <a href="#" class="nav-menu-link"
+               ><span class="nav-link-line"></span>Home</a
+            >
+         </li>
+         <li class="nav-menu-item">
+            <a href="#" class="nav-menu-link">How it’s made?</a>
+         </li>
+         <li class="nav-menu-item">
+            <a href="#" class="nav-menu-link">Our products</a>
+         </li>
+         <li class="nav-menu-item">
+            <a href="#" class="nav-menu-link">Top sellers</a>
+         </li>
+         <li class="nav-menu-item">
+            <a href="#" class="nav-menu-link">Chocolate is loved</a>
+         </li>
+      </ul>
 
      
       
       <button
-      class="menu-toggle js-open-menu"
+      class="menu-toggle js-open-menu modal-scroll"
       aria-expanded="false"
       aria-controls="mobile-menu"
    >
@@ -22,7 +40,7 @@
    </button>
 
       <div class="menu-container js-menu-container" id="mobile-menu">
-         <button type="button" class="menu-toggle js-close-menu">
+         <button type="button" class="menu-toggle js-close-menu modal-scroll">
             <svg class="menu-button-close" width="24" height="24">
                <use
                   href="./img/icons/icons.svg#icon-close"
@@ -33,21 +51,21 @@
         
          <ul class="nav-menu">
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link"
+               <a href="#" class="menu-toggle nav-menu-link  modal-scroll"
                   ><span class="nav-link-line"></span>Home</a
                >
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link">How it’s made?</a>
+               <a href="#" class="menu-toggle nav-menu-link  modal-scroll">How it’s made?</a>
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link">Our products</a>
+               <a href="#" class="menu-toggle nav-menu-link  modal-scroll">Our products</a>
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link">Top sellers</a>
+               <a href="#" class="menu-toggle nav-menu-link  modal-scroll">Top sellers</a>
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link">Chocolate is loved</a>
+               <a href="#" class="menu-toggle nav-menu-link  modal-scroll">Chocolate is loved</a>
             </li>
          </ul>
 
