--- a/src/partials/section-revievs.html
+++ b/src/partials/section-revievs.html
@@ -5,8 +5,8 @@
             <li class="review-items">
                 <div class="review-cards">
                     <img class="review-cards-foto"
-                        srcset="../img/revievs/dobrzhanska.png 1x, ../img/revievs/dobrzhanska@2x.png 2x" width="80"
-                        src="../img/revievs/dobrzhanska.png" alt="woman">
+                        srcset="./img/revievs/dobrzhanska.png 1x, ./img/revievs/dobrzhanska@2x.png 2x" width="80"
+                        src="./img/revievs/dobrzhanska.png" alt="woman">
                     <h3 class="revies-items-title">Victoria Dobrzhanska</h3>
                     <p class="review-cards-text">I love this chocolate bar. Perfect combination of light crispy wafer,
                         covered in a thin layer chocolate.
@@ -16,8 +16,8 @@
             <li class="review-items">
                 <div class="review-cards">
                     <img class="review-cards-foto"
-                        srcset="../img/revievs/babenko.png 1x, ../img/revievs/babenko@2x.png 2x" width="80"
-                        src="../img/revievs/babenko.png" alt="man">
+                        srcset="./img/revievs/babenko.png 1x, ./img/revievs/babenko@2x.png 2x" width="80"
+                        src="./img/revievs/babenko.png" alt="man">
                     <h3 class="revies-items-title">Nazar Babenko</h3>
                     <p class="review-cards-text">This chocolate confection is a delight! A delight! The wafer is light
                         and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
@@ -26,8 +26,8 @@
             <li class="review-items">
                 <div class="review-cards">
                     <img class="review-cards-foto"
-                        srcset="../img/revievs/kampusch.png 1x, ../img/revievs/kampusch@2x.png 2x" width="80"
-                        src="../img/revievs/kampusch.png" alt="woman">
+                        srcset="./img/revievs/kampusch.png 1x, ./img/revievs/kampusch@2x.png 2x" width="80"
+                        src="./img/revievs/kampusch.png" alt="woman">
                     <h3 class="revies-items-title">Olena Kampusch</h3>
                     <p class="review-cards-text">Chocolate is a family favourite treat. Love the delicious smooth
                         chocolate and the creaminess inside. The wafer is soft
@@ -37,8 +37,8 @@
             <li class="review-items">
                 <div class="review-cards">
                     <img class="review-cards-foto"
-                        srcset="../img/revievs/nataliasus.png 1x, ../img/revievs/nataliasus@2x.png 2x" width="80"
-                        src="../img/revievs/nataliasus.png" alt="">
+                        srcset="./img/revievs/nataliasus.png 1x, ./img/revievs/nataliasus@2x.png 2x" width="80"
+                        src="./img/revievs/nataliasus.png" alt="">
                     <h3 class="revies-items-title">Natalia Sus</h3>
                     <p class="review-cards-text">The chocolate assortment was delicious. Both dark and milk chocolate
                         pieces were smooth and just right on the
@@ -48,8 +48,8 @@
             <li class="review-items">
                 <div class="review-cards">
                     <img class="review-cards-foto"
-                        srcset="../img/revievs/danilo-nottingham.png 1x, ../img/revievs/danilo-nottingham@2x.png 2x"
-                        width="80" src="../img/revievs/danilo-nottingham.png" alt="man">
+                        srcset="./img/revievs/danilo-nottingham.png 1x, ./img/revievs/danilo-nottingham@2x.png 2x"
+                        width="80" src="./img/revievs/danilo-nottingham.png" alt="man">
                     <h3 class="revies-items-title">Danilo Nottingham</h3>
                     <p class="review-cards-text">This is delicious. It so rich and flavorful you don’t need to use as
                         many. I love topping an apple with
@@ -59,8 +59,8 @@
             <li class="review-items">
                 <div class="review-cards">
                     <img class="review-cards-foto"
-                        srcset="../img/revievs/irina-tydnuk.png 1x, ../img/revievs/irina-tydnuk@2x.png 2x" width="80"
-                        src="../img/revievs/irina-tydnuk.png" alt="woman">
+                        srcset="./img/revievs/irina-tydnuk.png 1x, ./img/revievs/irina-tydnuk@2x.png 2x" width="80"
+                        src="./img/revievs/irina-tydnuk.png" alt="woman">
                     <h3 class="revies-items-title">Irina Tydnyuk</h3>
                     <p class="review-cards-text">This is simply the best chocolate around, and I'm just thrilled to
                         support a local company! Best local
@@ -69,7 +69,7 @@
                 </div>
             </li>
         </ul>
-        
+
         <button class="review-btn" type="button">Leave a review</button>
     </div>
 
